Callback-based streaming for large files / long-lived connections